# zed-rustfmt

./: .gitignore  Cargo.toml  README.md  extension.toml  rustfmt.toml
.zed/: settings.json
extension/: Cargo.toml  extension.toml
extension/languages/rustfmt/: brackets.scm  config.scm  config.toml  injections.scm  outline.scm  redactions.scm
extension/src/: rustfmt.rs
languages/rustfmt/: config.toml  highlights.scm  indents.scm  overrides.scm  textobjects.scm
server/: Cargo.toml
server/src/: server.rs
src/: lib.rs
