[package]
name = "rustfmt-lsp-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/server.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rustfmt-lsp-server"
path = "src/server.rs"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.52.0", features = ["full"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
